# wit-bindgen

./: ..gitignore.un~  .Cargo.lock.un~  .gitignore  .gitignore~  .gitmodules  Cargo.lock~  Cargo.toml  README.md  TODO.md  WAI.md  WIT.md  WITX.md  WORLD.md  build-demo.sh  build.rs  console.js  demo.d.ts  demo.js  index.html  intermediate.cpp  main.js  main.ts  rust-toolchain.toml  wasm-tools.patch  wit-bindgen.sln
bindings/: core.rs
crates/bindgen-core/: Cargo.toml
crates/bindgen-core/src/: component.rs  lib.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/build-test-wasm/: Cargo.toml  build.rs  exports.c  imports.c
crates/c/: Cargo.toml  README.md
crates/c/src/: component_type_object.rs  lib.rs
crates/c/tests/: codegen.rs
crates/core/: Cargo.toml
crates/core/src/: abi.rs  async_.rs  chainable_method.rs  lib.rs  ns.rs  source.rs  symmetric.rs  types.rs
crates/cpp/: Cargo.toml  DESIGN.md
crates/cpp/helper-types/: wit-common.h  wit-guest.h  wit-host.h  wit-rt.h  wit.h
crates/cpp/src/: lib.rs  lib_old.rs  symbol_name.rs  wamr.rs
crates/cpp/test_headers/: expected  wasm_c_api.h  wasm_export.h  wit-common.h  wit-guest.h  wit-host.h  wit.h
crates/cpp/tests/: .gitignore  README.md  codegen.rs  symmetric.rs
crates/cpp/tests/meshless_resources/: .gitignore  Makefile
crates/cpp/tests/meshless_strings/: Makefile  wit
crates/cpp/tests/misc_wit/: option_handle.wit
crates/cpp/tests/native_mesh/: Makefile
crates/cpp/tests/native_resources/: .gitignore  Makefile  exports-foo-foo-resources-R.h  foo-foo-resources-R.h  main.cpp  the_world_cpp_native.h  the_world_native.cpp
crates/cpp/tests/native_strings/: .gitignore  Makefile  guest.cpp  guest.lds  main.cpp  the_world.cpp  the_world_cpp.h  the_world_cpp_native.h  the_world_native.cpp
crates/cpp/tests/smoke_details/: result8.wit
crates/cpp/tests/symmetric_async/: Cargo.toml  README.md  generate.sh
crates/cpp/tests/symmetric_future/: Cargo.toml  generate.sh
crates/cpp/tests/symmetric_future_string/: Cargo.toml  generate.sh  runner.rs  test.rs
crates/cpp/tests/symmetric_stream/: Cargo.toml  README.md  generate.sh
crates/cpp/tests/symmetric_stream_string/: Cargo.toml  build.rs  format.sh  generate.sh  test.rs
crates/cpp/tests/symmetric_tests/: flavorful.rs  lists.rs  many_arguments.rs  numbers.rs  options.rs  records.rs  results.rs  smoke.rs  strings.rs
crates/csharp/: Cargo.toml  README.txt
crates/csharp/src/: AsyncSupport.cs  FutureCommonSupport.cs  FutureReaderSupport.cs  FutureSupport.cs  FutureWriterSupport.cs  RepTable.cs  component_type_object.rs  csharp_ident.rs  csproj.rs  function.rs  interface.rs  lib.rs  world_generator.rs
crates/csharp/tests/: codegen.rs
crates/d/: Cargo.toml  README.md
crates/d/src/: lib.rs  wit_common.d
crates/demo/: Cargo.toml  browser.witx  demo.witx  index.html  main.js  main.ts
crates/demo/src/: lib.rs
crates/gen-c/: Cargo.toml
crates/gen-c/src/: lib.rs
crates/gen-c/tests/: codegen.rs  compile.rs
crates/gen-core/: Cargo.toml
crates/gen-core/src/: lib.rs  ns.rs
crates/gen-guest-c/: Cargo.toml
crates/gen-guest-c/src/: component_type_object.rs  lib.rs
crates/gen-guest-c/tests/: codegen.rs
crates/gen-guest-go/: Cargo.toml
crates/gen-guest-go/src/: lib.rs
crates/gen-guest-go/tests/: codegen.rs
crates/gen-guest-rust/: Cargo.toml
crates/gen-guest-rust/src/: lib.rs
crates/gen-guest-rust/test-macro/: Cargo.toml
crates/gen-guest-rust/test-macro/src/: lib.rs
crates/gen-guest-rust/tests/: codegen.rs  codegen_no_std.rs
crates/gen-guest-spidermonkey-js/: Cargo.toml
crates/gen-guest-spidermonkey-js/spidermonkey-wasm/: .gitignore  Makefile  README.md  bindgen.cpp  dump.cpp  initialize.cpp  mozconfig
crates/gen-guest-spidermonkey-js/src/: lib.rs
crates/gen-guest-teavm-java/: Cargo.toml
crates/gen-guest-teavm-java/src/: lib.rs
crates/gen-guest-teavm-java/tests/: codegen.rs  pom.xml
crates/gen-host-js/: .eslintrc.js  Cargo.toml  package.json
crates/gen-host-js/src/: lib.rs
crates/gen-host-js/tests/: codegen.rs  helpers.ts  runtime.rs  runtime.rs.disabled
crates/gen-host-wasmtime-py/: Cargo.toml  mypy.ini
crates/gen-host-wasmtime-py/src/: dependencies.rs  imports.rs  lib.rs  source.rs
crates/gen-host-wasmtime-py/tests/: codegen.rs  helpers.py  runtime.rs  runtime.rs.disabled
crates/gen-host-wasmtime-rust/: Cargo.toml
crates/gen-host-wasmtime-rust/src/: lib.rs
crates/gen-host-wasmtime-rust/tests/: codegen.rs  runtime.rs
crates/gen-js/: .eslintrc.js  Cargo.toml  package.json
crates/gen-js/src/: lib.rs
crates/gen-js/tests/: codegen.rs  eslint.rs  helpers.d.ts  helpers.js  run.rs  run.ts  runtime.rs
crates/gen-markdown/: Cargo.toml
crates/gen-markdown/src/: lib.rs
crates/gen-rust-wasm/: Cargo.toml
crates/gen-rust-wasm/src/: lib.rs
crates/gen-rust-wasm/tests/: codegen.rs  compile.rs  run.rs  runtime.rs
crates/gen-spidermonkey/: Cargo.toml
crates/gen-spidermonkey/spidermonkey-wasm/: Makefile  README.md  abort.cpp  bindgen.cpp  cx.cpp  initialize.cpp  malloc.cpp
crates/gen-spidermonkey/src/: data_segments.rs  lib.rs  opts.rs
crates/gen-spidermonkey/tests/: codegen-smw.rs
crates/gen-ts-near/: Cargo.toml
crates/gen-ts-near/src/: gen.rs  lib.rs
crates/gen-wasmer-py/: Cargo.toml  mypy.ini
crates/gen-wasmer-py/src/: lib.rs
crates/gen-wasmer-py/tests/: codegen.rs  runtime.rs
crates/gen-wasmtime/: Cargo.toml
crates/gen-wasmtime-py/: Cargo.toml
crates/gen-wasmtime-py/src/: dependencies.rs  lib.rs  source.rs
crates/gen-wasmtime-py/tests/: check.rs  codegen.rs  run.py  run.rs  runtime.rs
crates/gen-wasmtime/src/: lib.rs
crates/gen-wasmtime/tests/: codegen.rs  run.rs  runtime.rs
crates/go/: Cargo.toml  README.md
crates/go/src/: bindgen.rs  imports.rs  interface.rs  lib.rs  path.rs  wit_async.go  wit_future.go  wit_option.go  wit_result.go  wit_runtime.go  wit_stream.go  world.rs
crates/go/src/go.bytecodealliance.org/: 404.html  CNAME  README.md  wit-bindgen.html
crates/go/tests/: codegen.rs
test-complete/: Cargo.toml  README.md
test-complete/src/: lib.rs
(+2248 files in other folders)
