[package]
name = "wit-bindgen-cli"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
CLI tool to generate bindings for WIT documents and the component model.
"""

[workspace]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.48.1"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/bytecodealliance/wit-bindgen"
rust-version = "1.82.0"

[workspace.dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
heck = { version = "0.5" }
pulldown-cmark = { version = "0.13.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
indexmap = "2.12.1"
prettyplease = "0.2.37"
syn = { version = "2.0.111", features = ["printing"] }
futures = "0.3.31"

wat = "1.241.2"
wasmparser = "0.241.2"
wasm-encoder = "0.241.2"
wasm-metadata = { version = "0.241.2", default-features = false }
wit-parser = "0.241.2"
wit-component = "0.241.2"
wasm-compose = "0.241.2"

wit-bindgen-core = { path = 'crates/core', version = '0.48.1' }
wit-bindgen-c = { path = 'crates/c', version = '0.48.1' }
wit-bindgen-cpp = { path = 'crates/cpp', version = '0.48.1' }
wit-bindgen-rust = { path = "crates/rust", version = "0.48.1" }
wit-bindgen-csharp = { path = 'crates/csharp', version = '0.48.1' }
wit-bindgen-markdown = { path = 'crates/markdown', version = '0.48.1' }
wit-bindgen-moonbit = { path = 'crates/moonbit', version = '0.48.1' }
wit-bindgen = { path = 'crates/guest-rust', version = '0.48.1', default-features = false }
wit-bindgen-test = { path = 'crates/test', version = '0.48.1' }

[[bin]]
name = "wit-bindgen"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ['wrap_help'] }
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-c = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-cpp = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-markdown = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-moonbit = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-csharp = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-test = { workspace = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }
env_logger = "0.11.8"

[features]
default = [
  'c',
  'rust',
  'markdown',
  'go',
  'csharp',
  'cpp',
  'moonbit',
  'async',
]
c = ['dep:wit-bindgen-c']
cpp = ['dep:wit-bindgen-cpp']
rust = ['dep:wit-bindgen-rust']
markdown = ['dep:wit-bindgen-markdown']
go = []
csharp = ['dep:wit-bindgen-csharp']
csharp-mono = ['csharp']
moonbit = ['dep:wit-bindgen-moonbit']
async = []
