[package]
name = "test_component"
version = "0.1.0"
edition = "2021"
description = "Generated component for WIT world 'basic-test'"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.34"

# Configuration for building WASM components
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
