[package]
name = "wit-bindgen-core"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
wit-parser = { workspace = true }
anyhow = { workspace = true }
wit-component = { workspace = true }
wasmtime-environ = { workspace = true, features = ['component-model'], optional = true }

[features]
component-generator = ['dep:wasmtime-environ']
