[package]
name = "wit-bindgen-bridge"
authors = ["Christof Petig <christof.petig@arcor.de>"]
version = "0.1.0"
edition.workspace = true
repository = 'https://github.com/cpetig/wit-bindgen'
license = "Apache-2.0 WITH LLVM-exception"
description = """
Bridge binding (forwarding) generator for WIT and the component model, targeting w2c2 and wamr.
"""

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

#[dev-dependencies]
#test-helpers = { path = '../test-helpers' }
