[package]
name = "build-test-wasm"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false

[lib]
test = false
doctest = false

[build-dependencies]
witx-bindgen-gen-c = { path = '../gen-c', features = ['old-witx-compat'] }
witx-bindgen-gen-core = { path = '../gen-core' }

[features]
rust = []
c = []

default = ['rust', 'c']
