[package]
name = "wit-bindgen-c"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
C bindings generator for WIT and the component model, typically used through the
`wit-bindgen-cli` crate.
"""

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }
wasm-metadata = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
indexmap = { workspace = true }

[features]
clap = ['dep:clap', 'wit-bindgen-core/clap']
