[package]
name = "wit-bindgen-csharp"
authors = ["Timmy Silesmo <silesmo@nor2.io>"]
version = "0.16.0"
edition.workspace = true
repository = 'https://github.com/bytecodealliance/wit-bindgen'
license = "Apache-2.0 WITH LLVM-exception"
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
C# bindings generator for WIT and the component model, typically used
through the `wit-bindgen-cli` crate.
"""

[lib]
doctest = false
test = false

[dependencies]
wasm-encoder = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
wasm-metadata = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers' }

[features]
default = ["aot"]
aot = []
