[package]
name = "wit-bindgen-d"
authors = ["Demetrius Kanios <demetrius@kanios.net>"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
D bindings generator for WIT and the component model, typically used through the
`wit-bindgen-cli` crate.
"""

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }
wasm-metadata = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
indexmap = { workspace = true }

[features]
clap = ['dep:clap', 'wit-bindgen-core/clap']
