[package]
name = "demo"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ['cdylib']
test = false
doctest = false

[dependencies]
witx-bindgen-gen-core = { path = '../gen-core', features = ['old-witx-compat'] }
witx-bindgen-gen-rust-wasm = { path = '../gen-rust-wasm' }
witx-bindgen-gen-wasmtime = { path = '../gen-wasmtime' }
witx-bindgen-gen-js = { path = '../gen-js' }
