[package]
name = "witx-bindgen-gen-core"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
witx = { git = 'https://github.com/alexcrichton/WASI', branch = 'abi-next' }
witx2 = { path = '../witx2' }
anyhow = "1"

[features]
old-witx-compat = ['witx2/old-witx-compat']
