[package]
name = "wit-bindgen-gen-guest-c"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version.workspace = true
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
