[package]
name = "wit-bindgen-gen-guest-go"
authors = ["Jiaxiao Zhou <duibao55328@gmail.com>"]
version.workspace = true
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers', default-features = false, features = ['macros'] }
