[package]
name = "wit-bindgen-gen-guest-go"
version.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
wit-bindgen-gen-guest-c = {workspace = true}

[dev-dependencies]
test-helpers = { path = '../test-helpers', default-features = false, features = ['macros'] }
