[package]
name = "wit-bindgen-gen-guest-rust"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-bindgen-gen-rust-lib = { workspace = true }
wit-component = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
wit-bindgen-guest-rust = { path = '../guest-rust' }
test-helpers = { path = '../test-helpers' }
