[package]
name = "wit-bindgen-gen-guest-teavm-java"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen-core = { workspace = true }
heck = { version = "0.4", features = [ "unicode" ] }
clap = { workspace = true, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers', default-features = false, features = ['guest-teavm-java'] }
