[package]
name = "wit-bindgen-gen-guest-teavm-java"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
