[package]
name = "wit-bindgen-gen-guest-teavm-java"
version = "0.3.0"
edition.workspace = true

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
