[package]
name = "wit-bindgen-gen-host-js"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version.workspace = true
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { workspace = true, features = ['component-generator'] }
heck = { workspace = true }
clap = { workspace = true, optional = true }
wasmtime-environ = { workspace = true, features = ['component-model'] }
wit-component = { workspace = true }
indexmap = "1.0"

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
