[package]
name = "wit-bindgen-gen-host-wasmtime-rust"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-bindgen-gen-rust-lib = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
test-helpers = { path = '../test-helpers', features = ['host-wasmtime-rust'] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-bindgen-host-wasmtime-rust = { workspace = true, features = ['tracing'] }
