[package]
name = "wit-bindgen-gen-host-wasmtime-rust"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-bindgen-gen-rust-lib = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
test-helpers = { path = '../test-helpers' }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-bindgen-host-wasmtime-rust = { workspace = true, features = ['tracing'] }
wit-bindgen-testwasi-host-wasmtime-rust = { path = "../wasi_snapshot_preview1/host-wasmtime-rust" }

tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
test-log = { version = "0.2", default-features = false, features = ['trace'] }
