[package]
name = "wit-bindgen-gen-markdown"
version = "0.2.0"
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
heck = "0.3"
pulldown-cmark = { version = "0.8", default-features = false }
structopt = { version = "0.3", default-features = false, optional = true }
wit-bindgen-core = { path = '../bindgen-core', version = '0.2.0' }
