[package]
name = "wit-bindgen-gen-markdown"
version.workspace = true
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
heck = { workspace = true }
pulldown-cmark = { workspace = true }
structopt = { workspace = true, optional = true }
wit-bindgen-core = { workspace = true }
