[package]
name = "wit-bindgen-gen-markdown"
version = "0.3.0"
edition.workspace = true

[lib]
doctest = false
test = false

[dependencies]
heck = { workspace = true }
pulldown-cmark = { workspace = true }
clap = { workspace = true, optional = true }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
