[package]
name = "witx-bindgen-gen-rust-wasm"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
witx-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
witx-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
witx-bindgen-rust = { path = '../rust-wasm' }
test-codegen = { path = '../test-codegen', features = ['witx-bindgen-gen-rust-wasm'] }

[[test]]
name = "run"
harness = false
