[package]
name = "wai-bindgen-gen-rust-wasm"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
wai-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
wai-bindgen-rust = { path = '../rust-wasm' }
test-helpers = { path = '../test-helpers', features = ['wai-bindgen-gen-rust-wasm'] }
anyhow = "1.0.45"

[features]
witx-compat = ['wai-bindgen-gen-core/witx-compat']
