[package]
name = "wai-bindgen-gen-spidermonkey"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
lazy_static = "1.4.0"
structopt = { version = "0.3", optional = true }
wasm-encoder = "0.8.0"
wai-bindgen-gen-core = { path = "../gen-core" }

[dev-dependencies]
test-helpers = { path = '../test-helpers', features = ['wai-bindgen-gen-spidermonkey'] }
wasmparser = "0.80"
